--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ html lang="en">
     <form
         class="datatable__row datatable__row--add"
         method="POST"
-        action="https://kodilla-tasks-wm.herokuapp.com/v1/tasks/createTask"
+        action="http://localhost:8080/v1/tasks/createTask"
         data-task-add-form
     >
       <fieldset class="datatable__row-section datatable__row-section--input-section">
